Configure ping interval for websocket input
Added ping_interval setting for websocket source.

--- a/manifests/vector/http_to_kafka.yaml
+++ b/manifests/vector/http_to_kafka.yaml
@@ -33,7 +33,8 @@ data:
     type = "websocket"
     uri = "ws://10.2.17.205:3000/ws"
     framing.method = "bytes"
-
+    ping_interval = 10
+    
     [sinks.kafka_nriy_out]
     type = "kafka"
     inputs = ["ws_input"]
