refactor: restructure immich helm values to include controllers and update image tag to v2.4.1

--- a/clusters/home/argo-applications/immich.yaml
+++ b/clusters/home/argo-applications/immich.yaml
@@ -18,15 +18,20 @@ spec:
     helm:
       releaseName: immich
       values: |
-        env:
-          TZ: "Asia/Seoul"
-          NO_COLOR: "true"
-          DB_URL: postgresql://system:systemsecret@vchord.vd.ingtra.net:5432/immich
-          DB_VECTOR_EXTENSION: vectorchord
-          REDIS_HOSTNAME: redis.vd.ingtra.net
-          REDIS_PORT: "6379"
-        image:
-          tag: v1.135.3
+        controllers:
+          main:
+            containers:
+              main:
+                image:
+                  tag: v2.4.1
+                env:
+                  TZ: "Asia/Seoul"
+                  NO_COLOR: "true"
+                  DB_URL: postgresql://system:systemsecret@vchord.vd.ingtra.net:5432/immich
+                  DB_VECTOR_EXTENSION: vectorchord
+                  REDIS_HOSTNAME: redis.vd.ingtra.net
+                  REDIS_PORT: "6379"
+    
         immich:
           persistence:
             library:
