--- a/manifests/metallb-configs/bgp.yaml
+++ b/manifests/metallb-configs/bgp.yaml
@@ -20,4 +20,4 @@ spec:
       - key: kubernetes.io/hostname
         operator: In
         values:
-          - k8s-da-control
+          - k8s-la-worker-1
