--- a/manifests/llm-serving/cpp/embeddinggemma-300m.yaml
+++ b/manifests/llm-serving/cpp/embeddinggemma-300m.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: embeddinggemma-300m
 spec:
-  replicas: 5
+  replicas: 1
   selector:
     matchLabels:
       app: embeddinggemma-300m
@@ -15,10 +15,9 @@ spec:
       labels:
         app: embeddinggemma-300m
     spec:
-      runtimeClassName: nvidia
       containers:
         - name: llama-cpp
-          image: docker.io/cookieshake/llamacpp-jetson:b6941 
+          image: ghcr.io/ggml-org/llama.cpp:server
           imagePullPolicy: Always
           args:
             - --host
@@ -65,7 +64,7 @@ spec:
             timeoutSeconds: 5
             failureThreshold: 3
       nodeSelector:
-        nvidia.com/gpu.product: Orin
+        kubernetes.io/arch: amd64
 ---
 apiVersion: v1
 kind: Service
