chore: Set node-cleanup CronJob concurrencyPolicy to Allow.

--- a/clusters/home/node-cleanup.yaml
+++ b/clusters/home/node-cleanup.yaml
@@ -35,7 +35,7 @@ spec:
   schedule: "*/2 * * * *"
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 3
-  concurrencyPolicy: Forbid
+  concurrencyPolicy: Allow
   jobTemplate:
     spec:
       backoffLimit: 0
