feat: configure kubeletDir for csi-driver-nfs Helm chart.

--- a/clusters/home/argo-applications/csi-driver-nfs.yaml
+++ b/clusters/home/argo-applications/csi-driver-nfs.yaml
@@ -12,6 +12,7 @@ spec:
     helm:
       releaseName: csi-driver-nfs
       values: |
+        kubeletDir=/var/lib/k0s/kubelet
         controller:
           workingMountDir: /tmp/csi-driver-nfs
   destination:
