feat: add an init container to create workflow template directories for ComfyUI.

--- a/manifests/misc/comfy-ui.yaml
+++ b/manifests/misc/comfy-ui.yaml
@@ -28,6 +28,16 @@ spec:
       nodeSelector:
         kubernetes.io/hostname: k8s-da-gpu-2
       runtimeClassName: nvidia
+      initContainers:
+        - name: setup-directories
+          image: busybox:latest
+          command:
+            - sh
+            - -c
+            - mkdir -p /usr/local/lib/python3.12/site-packages/comfyui_workflow_templates/templates
+          volumeMounts:
+            - mountPath: /root
+              name: pvc-comfy-ui
       containers:
         - name: comfy-ui
           image: yanwk/comfyui-boot:cu128-slim
