chore: Update busybox image reference to include the full registry path.

--- a/manifests/misc/comfy-ui.yaml
+++ b/manifests/misc/comfy-ui.yaml
@@ -30,7 +30,7 @@ spec:
       runtimeClassName: nvidia
       initContainers:
         - name: setup-directories
-          image: busybox:latest
+          image: docker.io/library/busybox:latest
           command:
             - sh
             - -c
