chore: Update Metallb BGP and speaker node selectors to target `amd64` architecture instead of specific hostnames.

--- a/clusters/home/argo-applications/metallb.yaml
+++ b/clusters/home/argo-applications/metallb.yaml
@@ -20,7 +20,7 @@ spec:
       values: |
         speaker:
           nodeSelector:
-            kubernetes.io/hostname : k8s-la-worker-1
+            kubernetes.io/arch: amd64
   destination:
     server: https://kubernetes.default.svc
     namespace: metallb
