--- a/manifests/misc/comfy-ui.yaml
+++ b/manifests/misc/comfy-ui.yaml
@@ -1,16 +1,4 @@
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: pvc-comfy-ui
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 100Gi
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -38,11 +26,12 @@ spec:
             - containerPort: 8188
           volumeMounts:
             - mountPath: /root
-              name: pvc-comfy-ui
+              name: comfy-ui-data
       volumes:
-        - name: pvc-comfy-ui
-          persistentVolumeClaim:
-            claimName: pvc-comfy-ui
+        - name: comfy-ui-data
+          hostPath:
+            path: /data/comfy-ui
+            type: DirectoryOrCreate
 
 ---
 apiVersion: v1
